Average scores per grade

--- a/jupyter_practice.ipynb
+++ b/jupyter_practice.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "83890252",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -26,6 +28,14 @@
     "for school in high_schools:\n",
     "    print(school)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "374855b8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -662,6 +672,130 @@
     "\n",
     "#print the dataframe\n",
     "LA_School_District_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "86e8400e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Object oriented programming explained\n",
+    "class Cat:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "84b77667",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felix\n"
+     ]
+    }
+   ],
+   "source": [
+    "# instantiate a Cat object\n",
+    "first_cat = Cat('Felix')\n",
+    "print(first_cat.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d2acd666",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Garfield\n"
+     ]
+    }
+   ],
+   "source": [
+    "second_cat = Cat(\"Garfield\")\n",
+    "print(second_cat.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "90df796e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a Dog class with 3 attributes and assign actions.\n",
+    "class Dog:\n",
+    "    def __init__(self, name, color, sound):\n",
+    "        self.name = name\n",
+    "        self.color = color\n",
+    "        self.sound = sound\n",
+    "\n",
+    "    def bark(self):\n",
+    "        return self.sound + ' ' + self.sound"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "49d27b71",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fido\n",
+      "brown\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'woof! woof!'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first_dog = Dog(\"Fido\",\"brown\",\"woof!\")\n",
+    "print(first_dog.name)\n",
+    "print(first_dog.color)\n",
+    "first_dog.bark()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "424eb0ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'arf! arf!'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "second_dog = Dog(\"Lady\", \"blonde\",\"arf!\")\n",
+    "second_dog.bark()"
    ]
   }
  ],
