Adding final challenge assignment

--- a/PyCitySchools_Challenge.ipynb
+++ b/PyCitySchools_Challenge.ipynb
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ellye\\AppData\\Local\\Temp/ipykernel_9400/3904321406.py:18: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "C:\\Users\\ellye\\AppData\\Local\\Temp/ipykernel_18624/3904321406.py:18: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "  student_data_df[\"student_name\"] = student_data_df[\"student_name\"].str.replace(word,\"\")\n"
      ]
     },
@@ -1247,7 +1247,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "602597bc",
+   "id": "b4492392",
    "metadata": {},
    "outputs": [
     {
@@ -1278,7 +1278,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "8ad9d7c0",
+   "id": "c61750c2",
    "metadata": {},
    "outputs": [
     {
@@ -1963,7 +1963,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "673ed8eb",
+   "id": "6de7ead8",
    "metadata": {},
    "outputs": [
     {
@@ -1989,7 +1989,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "6ffa3956",
+   "id": "5024cef2",
    "metadata": {},
    "outputs": [
     {
@@ -2107,7 +2107,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "04ef94a3",
+   "id": "3bd005f4",
    "metadata": {},
    "outputs": [
     {
@@ -2224,8 +2224,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "76f5781e",
+   "execution_count": 24,
+   "id": "0c012910",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2237,7 +2237,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "2a8aa3d2",
+   "id": "da50b112",
    "metadata": {},
    "outputs": [
     {
@@ -2260,7 +2260,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "f8a8d013",
+   "id": "9b7bac31",
    "metadata": {},
    "outputs": [
     {
@@ -2283,7 +2283,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "9df41aa0",
+   "id": "bb548119",
    "metadata": {},
    "outputs": [
     {
@@ -2306,7 +2306,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "31bfbbae",
+   "id": "b087354f",
    "metadata": {},
    "outputs": [
     {
@@ -2338,7 +2338,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "58759107",
+   "id": "71f6ac86",
    "metadata": {},
    "outputs": [
     {
@@ -2369,8 +2369,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "073df7e6",
+   "execution_count": 30,
+   "id": "2074c46b",
    "metadata": {},
    "outputs": [
     {
@@ -2388,7 +2388,7 @@
        "Name: Thomas High School, dtype: object"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2401,8 +2401,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "f1009e2e",
+   "execution_count": 31,
+   "id": "4ba8f1b4",
    "metadata": {},
    "outputs": [
     {
@@ -2692,7 +2692,7 @@
        "Wright High School             96.611111          90.333333  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2703,8 +2703,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "53142ed9",
+   "execution_count": 32,
+   "id": "4f79740c",
    "metadata": {},
    "outputs": [
     {
@@ -2834,7 +2834,7 @@
        "Pena High School             90.540541  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2847,8 +2847,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "cee5c520",
+   "execution_count": 33,
+   "id": "9595d505",
    "metadata": {},
    "outputs": [
     {
@@ -2978,7 +2978,7 @@
        "Johnson High School            81.222432          53.539172  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2991,8 +2991,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "c9d60ab7",
+   "execution_count": 34,
+   "id": "ce98cf0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3019,8 +3019,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "f7064471",
+   "execution_count": 35,
+   "id": "5a9dfa13",
    "metadata": {},
    "outputs": [
     {
@@ -3187,7 +3187,7 @@
        "Wright High School     83.264706  84.010288  83.836782  83.644986"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3206,8 +3206,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "8dd4405e",
+   "execution_count": 36,
+   "id": "ae481e74",
    "metadata": {},
    "outputs": [
     {
@@ -3374,7 +3374,7 @@
        "Wright High School     83.833333  83.812757  84.156322  84.073171"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3393,8 +3393,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "d36181c9",
+   "execution_count": 37,
+   "id": "a75308e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3412,8 +3412,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "4ac786bc",
+   "execution_count": 38,
+   "id": "9c4bc97a",
    "metadata": {},
    "outputs": [
     {
@@ -3492,7 +3492,7 @@
        "Griffin High School   82.0  84.2  83.8  83.4"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3507,8 +3507,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "39e5ab50",
+   "execution_count": 39,
+   "id": "71a28b7c",
    "metadata": {},
    "outputs": [
     {
@@ -3587,7 +3587,7 @@
        "Griffin High School   83.4  83.7  84.3  84.0"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3602,8 +3602,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "17ad7a83",
+   "execution_count": 40,
+   "id": "8cf48cf6",
    "metadata": {},
    "outputs": [
     {
@@ -3746,7 +3746,7 @@
        "Griffin High School                       $586-630  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3765,8 +3765,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "62e4df7c",
+   "execution_count": 41,
+   "id": "c7fbe5ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3784,8 +3784,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "fd153b7d",
+   "execution_count": 42,
+   "id": "94257db2",
    "metadata": {},
    "outputs": [
     {
@@ -3884,7 +3884,7 @@
        "646-675                                53.526855  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3903,8 +3903,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "ae0e8a3e",
+   "execution_count": 43,
+   "id": "23779362",
    "metadata": {},
    "outputs": [
     {
@@ -4003,7 +4003,7 @@
        "646-675                                      54  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4020,8 +4020,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "f904e0a9",
+   "execution_count": 44,
+   "id": "e027dece",
    "metadata": {},
    "outputs": [
     {
@@ -4170,7 +4170,7 @@
        "Griffin High School                       $586-630  Medium (1000-1999)  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4189,7 +4189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 45,
    "id": "c3f65047",
    "metadata": {},
    "outputs": [
@@ -4203,7 +4203,7 @@
        "Name: % Passing Math, dtype: float64"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4220,7 +4220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 46,
    "id": "48bff41d",
    "metadata": {},
    "outputs": [
@@ -4303,7 +4303,7 @@
        "Large (2000-5000)           82.766634          58.286003  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4322,7 +4322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 47,
    "id": "162da0d6",
    "metadata": {},
    "outputs": [
@@ -4405,7 +4405,7 @@
        "Large (2000-5000)                 83                58  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4423,7 +4423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 48,
    "id": "c78b8810",
    "metadata": {
     "scrolled": true
@@ -4438,7 +4438,7 @@
        "Name: % Overall Passing, dtype: float64"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4457,7 +4457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 49,
    "id": "a6b08017",
    "metadata": {},
    "outputs": [
@@ -4530,7 +4530,7 @@
        "District             80.799062          53.672208  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4549,9 +4549,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 50,
    "id": "e0a38253",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -4622,7 +4624,7 @@
        "District                   81                54  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4637,154 +4639,6 @@
     "\n",
     "type_summary_df"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d82d15a4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "31570367",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7a824136",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b94d6a2d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3a148001",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0ef4934b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c24213c0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d2a68c74",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "86663ee6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8caac42e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e5a3b7ba",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "caa96d2e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# create summary data based on school type\n",
-    "# USe the groupby function on the per school summary df\n",
-    "type_math_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Math Score\"]\n",
-    "type_reading_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Reading Score\"]\n",
-    "type_passing_math = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Math\"]\n",
-    "type_passing_reading = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Reading\"]\n",
-    "type_overall_passing = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Overall Passing\"]\n",
-    "type_overall_passing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8a8694e9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Compile the type summary data into a DataFrame\n",
-    "type_summary_df = pd.DataFrame({\n",
-    "    \"Average Math Score\" : type_math_scores,\n",
-    "    \"Average Reading Score\" : type_reading_scores,\n",
-    "    \"% Passing Math\" : type_passing_math,\n",
-    "    \"% Passing Reading\" : type_passing_reading,\n",
-    "    \"% Overall Passing\" : type_overall_passing})\n",
-    "\n",
-    "type_summary_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "24c32329",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Format the new type summary DataFrame\n",
-    "type_summary_df[\"Average Math Score\"] = type_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
-    "type_summary_df[\"Average Reading Score\"] = type_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
-    "type_summary_df[\"% Passing Math\"] = type_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
-    "type_summary_df[\"% Passing Reading\"] = type_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
-    "type_summary_df[\"% Overall Passing\"] = type_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
-    "\n",
-    "type_summary_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e64f454d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
